# tereix

./: .gitignore  CMakeLists.txt  configure  flake.nix  hello.tx  package.nix  test.tx  testai.tx  testerr.tx
src/: ast.c  ast_serde.c  cgen.c  cli.c  diag.c  fmt.c  lsp.c  main.c  parser.c  sem.c  util.c
src/data_structures/arena_alloc/: arena.c
src/data_structures/ast_visitor/: ast_visitor.c
src/data_structures/hashmap/: hashmap.c  hashutils.c
src/data_structures/ptrmap/: ptrmap.c
src/data_structures/string_builder/: builder.c
src/data_structures/thread_pool/: thread_pool.c
src/data_structures/worklist/: worklist.c
src/private/: arena.h  ast_serde.h  ast_types.h  ast_visitor.h  c_gen_types.h  cli.h  diag.h  fmt.h  hashmap.h  hashutils.h  lex_types.h  lsp.h  parse_types.h  ptrmap.h  sem_types.h  string_builder.h  thread_pool.h  types.h  types_core.h  util.h  worklist.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/ast_serde/: CMakeLists.txt  test_ast_serde.c
tests/core/cgen/: CMakeLists.txt  test_cgen.c
tests/core/parser/: CMakeLists.txt  test_parser.c
tests/core/sem/: CMakeLists.txt  test_sem.c
tests/core/util/: CMakeLists.txt  test_util.c
tests/data_structures/: CMakeLists.txt
tests/data_structures/arena/: CMakeLists.txt  test_arena.c
tests/data_structures/hashmap/: CMakeLists.txt  test_hashmap.c  test_hashutils.c
tests/data_structures/string_builder/: CMakeLists.txt  test_string_builder.c
tests/data_structures/worklist/: CMakeLists.txt  test_worklist.c
tests/fmt/: CMakeLists.txt  test_fmt_ast.c  test_fmt_identif.c
